PHOENIX-7442 Apply Spotless to reformat the entire codebase